UtahLiveDataTest/src/objects/IntegrationHeader__c.object
<CustomObject>
    <description>[Business] Stores header record of integration file [ Need to Decide with Shah and Shiva if required and also if its is a Business or a Framework object]</description>
    <fields>
        <fullName>Filename__c</fullName>
        <label>Filename</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HeaderRecord__c</fullName>
        <label>Header Record</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntegrationConfig__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Integration Config</label>
        <referenceTo>IntegrationConfig__c</referenceTo>
        <relationshipLabel>Integration Headers</relationshipLabel>
        <relationshipName>IntegrationHeaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <label>Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Re-Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalChildRecords__c</fullName>
        <label>Total Child Records</label>
        <summaryForeignKey>IntegrationDetail__c.IntegrationHeader__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalCompetedChildRecords__c</fullName>
        <label>TotalCompetedChildRecords</label>
        <summaryFilterItems>
            <field>IntegrationDetail__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>IntegrationDetail__c.IntegrationHeader__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalFailedChildRecords__c</fullName>
        <label>TotalFailedChildRecords</label>
        <summaryFilterItems>
            <field>IntegrationDetail__c.Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </summaryFilterItems>
        <summaryForeignKey>IntegrationDetail__c.IntegrationHeader__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>IST: Integration Header</label>
    <nameField>
        <displayFormat>INTH-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>